# PX4_Swarm_Controller

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml  sitl_multiple_run.sh
config/: control_config.json  gains.yaml  swarm_config.json  waypoints.yaml
config/Trajectories/: waypoints_circular.yaml  waypoints_up_and_down.yaml
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Neighbors.msg  WeightedTopologyNeighbors.msg
include/: Arming.hpp  ChangeWaypoint.hpp  NearestNeighbors.hpp  NeighborsTraits.hpp  PID.hpp  SwarmController.hpp  WeightedTopologyController.hpp  WeightedTopologyNeighbors.hpp
include/SwarmControllers/WeightedTopology/: WeightedTopologyController.hpp  WeightedTopologyNeighbors.hpp
launch/: launch_simulation.py  swarm_config.json
px4_swarm_controller/: simulation_node.py
src/: Arming.cpp  ChangeWaypoint.cpp  WeightedTopologyController.cpp  WeightedTopologyNeighbors.cpp  arming_node.cpp  nearest_neighbors.cpp  nearest_neighbors_node.cpp  offboard_control.cpp  swarm_controller.cpp  swarm_controller_node.cpp  waypoint.cpp  weighted_topology_controller.cpp  weighted_topology_neighbors.cpp
src/SwarmControllers/WeightedTopology/: WeightedTopologyController.cpp  WeightedTopologyNeighbors.cpp
